Fixed issue that cause menu arrow to overflow

--- a/css/global.scss
+++ b/css/global.scss
@@ -250,7 +250,7 @@ body {
     }
 
     #ticker {
-        
+        @include transition(all .25s ease);
         display: inline-block;
         color: $lightgray;
         margin: 0px 32px 0px 32px;
@@ -264,6 +264,7 @@ body {
 
         &:hover {
             cursor: pointer;
+            color: $orange;
         }
 
         ul {
@@ -390,7 +391,7 @@ body {
             @include transition(all .25s ease);
             position: fixed;
             right: 0;
-            height: 100%;
+            height: 71px;
             width: 50px;
             border-left: 1px solid lighten($lightgray, 30%);
             text-align: center;
@@ -408,7 +409,7 @@ body {
             @include transition(all .25s ease);
             position: fixed;
             left: 0;
-            height: 100%;
+            height: 71px;
             width: 50px;
             border-right: 1px solid lighten($lightgray, 30%);
             text-align: center;
