--- a/css/sports.scss
+++ b/css/sports.scss
@@ -99,7 +99,7 @@ body {
 					padding-top: 4;
 					display:inline-block;
 					position: absolute;
-					right: 22px;
+					right: 40px;
 					text-align: right;
 				}
 			}
